		etc there. Also importing exec_elf.h from NetBSD [HEAD], and
		updating doc/RELEASE.html to reflect the location of thirdparty
		imports.
		Implementing the initial framework for I18N/localization. The
		first translation is Swedish. :-)
20080404	Making it possible to build with GTKMM 2.15.5 with --debug;
		note, however, that this produces memory leak warnings, so
		the GTKMM with --debug combination is not very useful yet.
		Implementing basic support for updating the UI when some things
		change: Undo/Redo-applicability, the name of the emulation, and
		the RunState. (As UI::UpdateUI().)
		Removing all old CVS $Id$ tags; they are not useful anymore.
		The GTKMM GUI EmulationDesignArea now shows some dummy circles
		(one for each component in the emulation setup).
20080405	Beginning on a FileLoader class, for loading binaries (e.g.
		ELFs). Also adding a test/ directory, where small test files
		used for unit tests may be stored. ELF program segments are
		loaded, but no additional information yet (entry point etc.).
		Catching std::exception at the outermost level, in order to
		print a reasonable message if the application crashes.
		Instead of loading binaries into an AddressDataBus, they are
		now loaded into a Component, which, if it has a "pc" state
		variable, is set to the entry point. Starting gxemul with
		-E testmips test/FileLoader_ELF_MIPS actually attempts to
		start running the binary now :-)
		Some more work on the GTKMM GUI: the debug output window now
		shows debug messages and commands being executed.
20080406	Adding a section about Model-View-Controller to the source
		code documentation main page, and a simple picture of what the
		component tree may look like.
		Introducing "visible class names" in addition to the normal
		class name, for components. This makes mips_cpu0 show up as
		just cpu0, which is much nicer.
		uint16_t, 32_t, and 64_t state variables are now outputted in
		hexadecimal form in ToString(), for readability.